remade IssueManagerTest, IssueManager